# generic-fastapi-server

./: .env  .env.base  .env.base.example  .env.dev  .env.develop  .env.development  .env.development.example  .env.example  .env.prod  .gitignore  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.develop.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  utils.sh
.github/workflows/: run_unit_tests.yaml
app/: assembly.py  config.py  entrypoint.sh  main.py  run.py
app/assembly/: assembly.py
app/database/: alembic.ini
app/database/migrations/: env.py
app/database/migrations/versions/: c5d9f147eed9_.py  cd2d34f2568d_.py  e2155a03cd80_.py
app/database/orm/: models.py
app/database/orm/crud/: generic.py  interfaces.py
app/database/utils/: introspection.py  maintenance.py  tiny.py  versioning.py
app/db/: __init__.py  fake.py  utils.py
app/db/migrations/: env.py
app/db/migrations/versions/: 30679c008637_.py  6a38d3743f26_.py
app/db/orm/: __init__.py  models.py
app/db/orm/crud/: common.py  generic.py  interfaces.py
app/db/utils/: maintenance.py  versions.py
app/dependencies/: auth.py  db.py  injector.py
app/endpoints/: custom.py  extra.py
app/endpoints/health/: health.py  interactors.py  schema.py
app/endpoints/items/: router.py
app/endpoints/items/schema/: requests.py  responses.py
app/endpoints/liveness/: liveness.py  schema.py
app/endpoints/readiness/: readiness.py  schema.py
app/endpoints/tokens/: tokens.py
app/endpoints/users/: schema.py  users.py
app/interactors/auth/: errors.py  interactors.py  interfaces.py  secret_manager.py  token_manager.py
app/interactors/health_check/: interactors.py  interfaces.py
app/interactors/liveness/: interactors.py  interfaces.py
app/interactors/readiness/: interactors.py  interfaces.py
app/interactors/users/: interactors.py
app/settings/: config.py
tests/: assembly.py  conftest.py  fake.py  utils.py
tests/test_auth/: test_secret_manager.py  test_token_manager.py
tests/test_crud/: conftest.py  generic_crud.py  generic_models.py  test_generic_crud.py
tests/test_database/: conftest.py
tests/test_database/test_utils/: test_maintanance.py
tests/test_endpoints/: conftest.py  test_health.py  test_items.py  test_liveness.py  test_readiness.py  test_users.py
tests/test_interactors/: conftest.py  test_health_check_probe.py  test_liveness_probe.py  test_readiness_probe.py
tests/test_orm/: conftest.py  models.py  test_common_crud.py
